src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: "KMR Apparat";
    src: url("./fonts/trial/KMR-Apparat-Bold.woff") format("woff");
    font-weight: bold;
    font-style: normal;
  }

  @font-face {
    font-family: "KMR Apparat";
    src: url("./fonts/trial/KMR-Apparat-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
  }

  @font-face {
    font-family: "GT Planar";
    src:
      url("./fonts/GT-Planar-Regular.woff") format("woff"),
      url("./fonts/GT-Planar-Regular.woff2") format("woff2");
    font-weight: normal;
    font-style: normal;
  }

  @font-face {
    font-family: "CoFo Sans Mono", monospace, monospace;
    src:
      url("./fonts/CoFoSansMono-Regular.woff") format("woff"),
      url("./fonts/CoFoSansMono-Regular.woff2") format("woff2");
    font-weight: normal;
    font-style: normal;
  }

  :root {
    @apply bg-background text-foreground transition-colors duration-300;
  }

  .dark {
    @apply bg-background-dark text-foreground-dark;
  }

  body {
    @apply min-h-screen;
  }

  *::selection {
    @apply bg-accent-blood-orange text-off-white;
  }
}

main {
  @apply font-planar;
  @apply font-normal;
  font-style: normal;
}

h1 {
  @apply font-apparat;
  @apply font-medium;
  font-style: normal;
}

h2 {
  @apply font-apparat;
  @apply font-medium;
  font-style: normal;
}

h3 {
  @apply font-planar;
  @apply font-normal;
  font-style: normal;
}

caption,
figcaption {
  @apply font-planar;
  @apply font-normal;
  font-style: normal;
}

caption .code,
caption .pre,
figcaption .code,
figcaption .pre {
  @apply font-mono;
  @apply font-normal;
  font-style: normal;
}

code,
pre {
  @apply font-mono;
  @apply font-normal;
  font-style: normal;
}

